syntax = "proto3";

package image;
import "common.proto";

option csharp_namespace = "Inaba.Presentation.gRPC";

service ImageService {
	rpc GetImageRankings(GetImageRankingsRequest) returns (GetImageRankingsResponse);
} 

message GetImageRankingsRequest {
	AgeRating agerating = 1;
	RankingInterval rankingInterval = 2;
	image.PagingCondition pageCondition = 3;
}

message GetImageRankingsResponse {
	repeated ImageThumbnail items = 1;
	image.Paging paging = 2;
}

message ImageThumbnail {
	string id = 1;
	string imageUrl = 2;
	string title = 3;
	int32 amount = 4;
	AgeRating ageRating = 5;
	User user = 6;

	message User {
		string userName = 1;
		string userProfileUrl = 2;
	}
}

enum AgeRating {
	All = 0;
	R18 = 1;
}
enum RankingInterval {
	Daily = 0;
	Weekly = 1;
	Monthly = 2;
}